Fixed spacing between contact list items for cluster contacts

--- a/static/scss/_clusters.scss
+++ b/static/scss/_clusters.scss
@@ -42,6 +42,10 @@
   @include list-unstyled();
   margin-top: 8px;
 
+  li {
+    margin-bottom: 2px;
+  }
+
   a {
     color: #000;
     font-size: .9em;
